k8s/infrastructure/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: shoeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.11.0
          ports:
            - containerPort: 5000   # TCP input
            - containerPort: 9600   # Logstash monitoring API
          volumeMounts:
            - name: config
              mountPath: /usr/share/logstash/pipeline
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "600m"
              memory: "1Gi"
      volumes:
        - name: config
          configMap:
            name: logstash-config

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: shoeapp
spec:
  selector:
    app: logstash
  ports:
    - name: tcp-input
      port: 5000
      targetPort: 5000
    - name: monitoring
      port: 9600
      targetPort: 9600
